--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "axios": "*",
     "react": "*",
     "react-native": "*",
-    "react-native-device-info": "*",
     "react-native-webview": "*"
   },
   "jest": {
@@ -70,9 +69,9 @@
     ]
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "react-native-device-info": "^10.3.0",
-    "react-native-webview": "^11.23.1"
+    "axios": "*",
+    "expo-device": "~5.4.0",
+    "react-native-webview": "*"
   },
   "lint-staged": {
     "src/**/*.ts?(x)": "yarn ckeck"
