--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "*",
     "react": "*",
     "react-native": "*",
+    "react-native-device-info": "*",
     "react-native-webview": "*"
   },
   "jest": {
@@ -69,9 +70,9 @@
     ]
   },
   "dependencies": {
-    "axios": "*",
-    "expo-device": "~5.4.0",
-    "react-native-webview": "*"
+    "axios": "^1.1.3",
+    "react-native-device-info": "^10.3.0",
+    "react-native-webview": "^11.23.1"
   },
   "lint-staged": {
     "src/**/*.ts?(x)": "yarn ckeck"
